--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,14 @@ fastar==0.8.0
 google-auth==2.47.0
 google-genai==1.56.0
 googleapis-common-protos==1.72.0
+grpcio==1.76.0
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
+hyperframe==6.1.0
 idna==3.11
 importlib_metadata==8.7.1
 iniconfig==2.3.0
@@ -47,6 +51,7 @@ pdfminer.six==20251230
 pdfplumber==0.11.9
 pillow==12.1.0
 pluggy==1.6.0
+portalocker==3.2.0
 protobuf==6.33.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -64,6 +69,7 @@ python-dotenv==1.2.1
 python-multipart==0.0.21
 pytz==2025.2
 PyYAML==6.0.3
+qdrant-client==1.16.2
 requests==2.32.5
 rich==14.2.0
 rich-toolkit==0.17.1
