--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,12 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-beautifulsoup4==4.14.3
-certifi==2026.1.4
-cffi==2.0.0
-chardet==5.2.0
-charset-normalizer==3.4.4
-click==8.3.1
-cryptography==46.0.3
-distro==1.9.0
-dnspython==2.8.0
-email-validator==2.3.0
-eval_type_backport==0.3.1
-fastapi==0.128.0
-fastapi-cli==0.0.20
-fastapi-cloud-cli==0.8.0
-fastar==0.8.0
-google-auth==2.47.0
-googleapis-common-protos==1.72.0
-grpcio==1.76.0
-h11==0.16.0
-h2==4.3.0
-hpack==4.1.0
-httpcore==1.0.9
-httptools==0.7.1
-httpx==0.28.1
-hyperframe==6.1.0
-idna==3.11
-importlib_metadata==8.7.1
-iniconfig==2.3.0
-invoke==2.2.1
-Jinja2==3.1.6
-jiter==0.12.0
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
-mistralai==1.10.0
-numpy==2.4.0
-opentelemetry-api==1.38.0
-opentelemetry-exporter-otlp-proto-common==1.38.0
-opentelemetry-exporter-otlp-proto-http==1.38.0
-opentelemetry-proto==1.38.0
-opentelemetry-sdk==1.38.0
-opentelemetry-semantic-conventions==0.59b0
-packaging==25.0
-pandas==2.3.3
-pdfminer.six==20251230
-pdfplumber==0.11.9
-pillow==12.1.0
-pluggy==1.6.0
-portalocker==3.2.0
-protobuf==6.33.2
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.23
-pydantic==2.12.5
-pydantic-extra-types==2.11.0
-pydantic-settings==2.12.0
-pydantic_core==2.41.5
-Pygments==2.19.2
-pypdfium2==5.3.0
-pytest==9.0.2
-pytest-asyncio==1.3.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-python-multipart==0.0.21
-pytz==2025.2
-PyYAML==6.0.3
-qdrant-client==1.16.2
-requests==2.32.5
-rich==14.2.0
-rich-toolkit==0.17.1
-rignore==0.7.6
-rsa==4.9.1
-sentry-sdk==2.48.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.8.1
-starlette==0.50.0
-tenacity==9.1.2
-tqdm==4.67.1
-typer==0.21.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.2
-uvicorn==0.40.0
-uvloop==0.22.1
-watchfiles==1.1.1
-websockets==15.0.1
-zipp==3.23.0
+fastapi
+uvicorn
+python-dotenv
+requests
+beautifulsoup4
+pdfplumber
+chardet
+pandas
+qdrant-client
+mistralai
+sentence-transformers
+python-multipart
