--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
 services:
   qdrant:
     image: qdrant/qdrant
+    restart: always
     ports:
       - "6333:6333"
       - "6334:6334"
     volumes:
-      - qdrant-data:/etc/qdrant-data
+      - ./qdrant_data:/qdrant/storage
 
   api:
     build: .
+    volumes:
+      - hf_cache:/root/.cache
     env_file:
       - .env
     ports:
@@ -26,3 +29,4 @@ services:
 
 volumes:
   qdrant-data:
+  hf_cache:
