--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -32,6 +32,6 @@ COPY --from=builder /opt/venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
 # Copiamos tu código
-COPY app/ ./app/
+COPY . ./app/
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
