--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,27 @@ services:
     mem_limit: 512m
     mem_reservation: 256m
 
+  redis:
+    image: redis/redis-stack:latest
+    restart: unless-stopped
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    volumes:
+      - redis_data_dev:/var/lib/redis/data
+    ports:
+      - "6379:6379"
+      - "8001:8001"
+    env_file: .env
+
+  celery:
+    build: ./app
+    command: celery -A app.core.celery_app worker --loglevel=info
+    depends_on:
+      - redis
+    env_file: .env
+    volumes:
+      - .:/backend
+
   api:
     build: ./app
     volumes:
@@ -43,3 +64,4 @@ services:
 volumes:
   qdrant_data:
   hf_cache:
+  redis_data_dev:
