feat: added prometheus client and basic config

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,11 +1,13 @@
 fastapi
 uvicorn
 python-dotenv
+
 requests
 beautifulsoup4
 pdfplumber
 chardet
 pandas
+
 qdrant-client
 mistralai
 sentence-transformers
@@ -13,3 +15,5 @@ python-multipart
 structlog
 redis 
 celery
+
+prometheus-client
