--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,17 @@ services:
     networks:
       - backend_net
 
+  prometheus:
+    profiles:
+      - monitoring
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - backend_net
+
 volumes:
   qdrant_data:
   hf_cache:
