--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,3 +2,6 @@ scrape_configs:
   - job_name: "fastapi"
     static_configs:
       - targets: ["api:8000"]
+  - job_name: "celery"
+    static_configs:
+      - targets: ["celery-exporter:9808"]
